HTML/CSS for Homepage and Shot History

--- a/User_Interface/WebPages/BrythonLaxHomepage.html
+++ b/User_Interface/WebPages/BrythonLaxHomepage.html
@@ -50,7 +50,7 @@
             <h1 style="color:white;"> NURC Lacrosse Homepage</h1>
         </div>
 
-        <img src="goal_plot.png" alt="goal with plotted markers">
+        <img src="/Users/emilygordon/NURC/goal_plot.png" alt="goal with plotted markers">
 
     <script type="text/python">
     from browser import document, html
