--- a/User_Interface/WebPages/ShotHistory.html
+++ b/User_Interface/WebPages/ShotHistory.html
@@ -3,7 +3,7 @@
 <head>
   <title>NURC Lacrosse Homepage</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
-  <link rel="stylesheet" href="style_homepage.css">
+  <link rel="stylesheet" href="style_shothistory.css">
 </head>
 <body>
 
@@ -26,11 +26,17 @@
   </div>
 
   <div id="main" class="content">
-    <div class="buttons">
-      <a href="#">Turn Robot On</a>
-      <a href="#">Homing Sequence</a>
-      <a id='stop' href="#">Emergency Stop</a>
+    <div class="goal_plot">
+      <img src="/Media/lax_net_fullgrid.png" alt="lacrosse goal">
     </div>
+
+    <div class="field_plot">
+      <img src="/Media/lax_field.png" alt="lacrosse field">
+    </div>
+  </div>
+
+  <div id="shot_info">
+
   </div>
 
   <div class="navigation">
