UI: added Websockets demos
from Ilya chat

--- a/User_Interface/WebPages/LaxHomepage.html
+++ b/User_Interface/WebPages/LaxHomepage.html
@@ -33,11 +33,20 @@
     </div>
   </div>
 
+<!--
   <div class="navigation">
     <a href="/WebPages/LaxHomepage.html"><img src='/Media/homepage_icon.png' alt="Homepage"></a>
     <a href="/WebPages/ShotHistory.html"><img src='/Media/shot_history_icon.png' alt="Shot History"></a>
     <a href="/WebPages/PlayerAnalytics.html"><img src='/Media/player_analytics_icon.png' alt="Player Analytics"></a>
   </div>
+-->
 
+  <div class="navigation">
+    <a href="LaxHomepage.html"><img src='/Media/homepage_icon.png' alt="Homepage"></a>
+    <a href="ShotHistory.html"><img src='/Media/shot_history_icon.png' alt="Shot History"></a>
+    <a href="PlayerAnalytics.html"><img src='/Media/player_analytics_icon.png' alt="Player Analytics"></a>
+  </div>
+    
+    
 </body>
 </html>
