Updated Shot History Code
- put the field and goal plots in the same script. This allows for color continuity for the same ball from the field plot to the goal plot

--- a/User_Interface/WebPages/LaxHomepage.html
+++ b/User_Interface/WebPages/LaxHomepage.html
@@ -21,7 +21,7 @@
   <div id="banner">
     <div class="content">
       <img src="/Media/NU_logo.png">
-      <h1>Lacrosse</h1>
+      <h1>Women's Lacrosse</h1>
     </div>
   </div>
 
