--- a/User_Interface/WebPages/ShotHistory.html
+++ b/User_Interface/WebPages/ShotHistory.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>NURC Lacrosse Homepage</title>
+  <title>Shot History</title>
   <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway:100,200,600,700" rel="stylesheet">
   <link rel="stylesheet" href="style_shothistory.css">
 </head>
@@ -27,7 +27,7 @@
 
   <div id="main" class="content">
     <div class="goal_plot">
-      <img id="lax_goal" src="/Media/lax_net_fullgrid.png" alt="lacrosse goal">
+      <img id="lax_goal" src="/Media/lax_net_zones.png" alt="lacrosse goal">
     </div>
 
     <div class="field_plot">
