UI: file organization
removed irrelevant code + HTML; renamed "sean_webtest" filenames to something more comprehensible to the user.

also changed the goal image generation script to only use local paths, rather than absolute paths

--- a/User_Interface/tornado_env_test/tornado_env_site.html
+++ b/User_Interface/tornado_env_test/tornado_env_site.html
@@ -32,7 +32,7 @@
     <textarea class="video_zone" id="msg" rows="20" cols="50">&nbsp;</textarea>
     
 <!--    <script src="sean_websockets_v1.js"></script>-->
-    <script src="{{ static_url('sean_websockets_v1.js') }}" type="text/javascript"></script>
+    <script src="{{ static_url('websockets_img_display.js') }}" type="text/javascript"></script>
 
 <!--
     <script>
